--- a/MarioGamer/MarioGamer.vcxproj
+++ b/MarioGamer/MarioGamer.vcxproj
@@ -130,12 +130,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Formas.cpp" />
     <ClCompile Include="MarioGamer.cpp" />
     <ClCompile Include="Plataforma.cpp" />
     <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Enemy.h" />
     <ClInclude Include="Formas.h" />
     <ClInclude Include="Plataforma.h" />
     <ClInclude Include="Player.h" />
